summarized calculations in a function

--- a/Briq.ipynb
+++ b/Briq.ipynb
@@ -6,13 +6,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def ganancia_briq(cantidad,interes_anual, comision, meses_duracion):\n",
+    "    interes_anual /=100\n",
+    "    comision /=100\n",
+    "    result = {}\n",
+    "    ganancia_intereses_anual = interes_anual * cantidad\n",
+    "    ganancia_intereses_total = ganancia_intereses_anual*meses_duracion/12\n",
+    "    result['ganancia_intereses_total'] = ganancia_intereses_total\n",
+    "    pago_ISR = ganancia_intereses_total * 0.2\n",
+    "    result['pago_ISR'] = pago_ISR\n",
+    "    pago_comision = (cantidad + ganancia_intereses_total)*comision\n",
+    "    result['pago_comision'] = pago_comision\n",
+    "    ganancia = ganancia_intereses_total - pago_ISR - pago_comision\n",
+    "    result['ganancia'] = ganancia\n",
+    "    ganancia_mensual = ganancia/meses_duracion\n",
+    "    result['ganancia_mensual'] = ganancia_mensual\n",
+    "    return result\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cantidad = 100000\n",
-    "interes_anual = 14\n",
+    "interes_anual = 19\n",
     "comision = 0.1\n",
-    "meses_duracion = 21\n",
-    "\n",
-    "interes_anual /=100\n",
-    "comision /=100"
+    "meses_duracion = 19\n",
+    "ganancia_briq(cantidad,interes_anual, comision, meses_duracion)"
    ]
   },
   {
@@ -20,51 +42,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ganancia_intereses_anual = interes_anual * cantidad\n",
-    "ganancia_intereses_total = ganancia_intereses_anual*meses_duracion/12\n",
-    "ganancia_intereses_total"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pago_ISR = ganancia_intereses_total * 0.2\n",
-    "pago_ISR"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "pago_comision = (cantidad + ganancia_intereses_total)*comision\n",
-    "pago_comision"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "ganancia = ganancia_intereses_total - pago_ISR - pago_comision\n",
-    "ganancia"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ganancia_mensual = ganancia/meses_duracion\n",
-    "ganancia_mensual"
-   ]
+   "source": []
   },
   {
    "cell_type": "raw",
